maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:85: error: not found: value whil
  whil(true){
  ^